--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
   position: relative;
 }
 
-/* Top HOA button */
+/* HOA Button */
 .hoa-btn {
   position: fixed;
   top: 10px;
@@ -41,176 +41,69 @@ body {
 }
 .hoa-btn:hover { transform: translateX(-50%) scale(1.05); box-shadow: 0 0 20px #00ff00; }
 
-canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-}
+/* Canvas for matrix effect */
+canvas { position: absolute; top:0; left:0; width:100%; height:100%; z-index:0; }
 
-h1 {
-  font-size: 2em;
-  text-shadow: 0 0 10px #00ff00;
-  margin-bottom: 20px;
-  animation: glow 2s infinite alternate;
-  z-index: 2;
-  text-align: center;
-}
+/* Main Page Styles */
+#mainPage { display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100%; height: 100%; z-index:2; }
 
+h1 { font-size:2em; text-shadow:0 0 10px #00ff00; margin-bottom:20px; animation:glow 2s infinite alternate; text-align:center; }
 @keyframes glow { from { text-shadow:0 0 10px #00ff00;} to{ text-shadow:0 0 20px #00ff00,0 0 40px #00ff00;} }
 
-.boxes { display: flex; gap: 50px; z-index: 2; }
-
-.display-box {
-  width: 200px;
-  padding: 15px;
-  background: rgba(0, 0, 0, 0.7);
-  border: 2px solid #00ff00;
-  border-radius: 5px;
-  box-shadow: 0 0 15px #00ff00;
-  color: #00ff00;
-  text-align: center;
-  font-size: 14px;
-  user-select: none;
-  cursor: pointer;
-  pointer-events: auto;
-  animation: textglow 3s infinite alternate;
-  font-family: 'Courier New', monospace;
-  transition: transform 0.3s, box-shadow 0.3s;
-}
-.display-box:hover { transform: scale(1.05); box-shadow:0 0 30px #00ff00,0 0 50px #c0ffc0; }
+.boxes { display:flex; gap:50px; }
+.display-box { width:200px; padding:15px; background:rgba(0,0,0,0.7); border:2px solid #00ff00; border-radius:5px; box-shadow:0 0 15px #00ff00; color:#00ff00; text-align:center; font-size:14px; user-select:none; cursor:pointer; pointer-events:auto; animation:textglow 3s infinite alternate; font-family:'Courier New', monospace; transition: transform 0.3s, box-shadow 0.3s; }
+.display-box:hover { transform:scale(1.05); box-shadow:0 0 30px #00ff00,0 0 50px #c0ffc0; }
 
 @keyframes textglow { from{ text-shadow:0 0 5px #00ff00;color:#00ff00;} to{ text-shadow:0 0 15px #00ff00,0 0 30px #00ff00;color:#c0ffc0;} }
 
-.sparkle {
-  position: absolute;
-  width: 6px;
-  height: 6px;
-  background: #00ff00;
-  border-radius: 50%;
-  box-shadow: 0 0 10px #00ff00;
-  animation: sparkleAnim 3s infinite;
-}
+/* Sparkles */
+.sparkle { position:absolute; width:6px; height:6px; background:#00ff00; border-radius:50%; box-shadow:0 0 10px #00ff00; animation:sparkleAnim 3s infinite; }
+@keyframes sparkleAnim { 0% { opacity:0; transform:translateY(0) rotate(0deg); } 50% { opacity:1; transform:translateY(-20px) rotate(180deg);} 100% { opacity:0; transform:translateY(0) rotate(360deg);} }
 
-@keyframes sparkleAnim {
-  0% { opacity: 0; transform: translateY(0) rotate(0deg); }
-  50% { opacity: 1; transform: translateY(-20px) rotate(180deg); }
-  100% { opacity: 0; transform: translateY(0) rotate(360deg); }
-}
-
-/* Modal styles */
-.modal { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:10; justify-content:center; align-items:center; }
-.modal-content { background: rgba(0,0,0,0.9); border:2px solid #00ff00; padding:30px; border-radius:10px; color:#00ff00; font-family:'Courier New', monospace; text-align:center; position:relative; box-shadow:0 0 30px #00ff00; }
+/* Owners Modal */
+.modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:10; justify-content:center; align-items:center; }
+.modal-content { background:rgba(0,0,0,0.9); border:2px solid #00ff00; padding:30px; border-radius:10px; color:#00ff00; font-family:'Courier New', monospace; text-align:center; position:relative; box-shadow:0 0 30px #00ff00; }
 .close-btn { position:absolute; top:10px; right:15px; font-size:18px; cursor:pointer; color:#00ff00; font-weight:bold; }
 .close-btn:hover { color:#c0ffc0; }
 
 /* Buttons */
-.unmute-btn, .skip-btn {
-  position: fixed;
-  z-index: 20;
-  padding: 10px 20px;
-  border: 2px solid #00ff00;
-  color: #00ff00;
-  background: rgba(0,0,0,0.7);
-  cursor: pointer;
-  font-family: 'Courier New', monospace;
-  border-radius: 5px;
-  text-align: center;
-}
-.unmute-btn { bottom: 60px; right: 20px; }
-.skip-btn { bottom: 100px; right: 20px; }
-.unmute-btn:hover, .skip-btn:hover { background: rgba(0,0,0,0.9); box-shadow:0 0 20px #00ff00,0 0 40px #00ff00; animation: glitch 0.5s infinite; }
+.unmute-btn, .skip-btn { position: fixed; z-index:20; padding:10px 20px; border:2px solid #00ff00; color:#00ff00; background: rgba(0,0,0,0.7); cursor:pointer; font-family:'Courier New', monospace; border-radius:5px; text-align:center; }
+.unmute-btn { bottom:60px; right:20px; }
+.skip-btn { bottom:100px; right:20px; }
+.unmute-btn:hover, .skip-btn:hover { background: rgba(0,0,0,0.9); box-shadow:0 0 20px #00ff00,0 0 40px #00ff00; animation:glitch 0.5s infinite; }
+@keyframes glitch {0% { transform: translate(0,0) skew(0deg);}20% { transform: translate(-2px,2px) skew(-2deg);}40% { transform: translate(2px,-2px) skew(2deg);}60% { transform: translate(-1px,1px) skew(-1deg);}80% { transform: translate(1px,-1px) skew(1deg);}100% { transform: translate(0,0) skew(0deg);} }
 
-@keyframes glitch {
-  0% { transform: translate(0px, 0px) skew(0deg); }
-  20% { transform: translate(-2px, 2px) skew(-2deg); }
-  40% { transform: translate(2px, -2px) skew(2deg); }
-  60% { transform: translate(-1px, 1px) skew(-1deg); }
-  80% { transform: translate(1px, -1px) skew(1deg); }
-  100% { transform: translate(0px, 0px) skew(0deg); }
-}
-
-.music-warning {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  z-index: 20;
-  padding: 10px 20px;
-  border: 2px solid #00ff00;
-  color: #00ff00;
-  background: rgba(0,0,0,0.7);
-  font-family: 'Courier New', monospace;
-  border-radius: 5px;
-  text-align: center;
-  transition: opacity 1s;
-}
+/* Music Warning */
+.music-warning { position: fixed; bottom:20px; right:20px; z-index:20; padding:10px 20px; border:2px solid #00ff00; color:#00ff00; background: rgba(0,0,0,0.7); font-family:'Courier New', monospace; border-radius:5px; text-align:center; transition: opacity 1s; }
 
 /* Now Playing */
-.now-playing {
-  position: fixed;
-  top: 10px;
-  right: 20px;
-  z-index: 20;
-  padding: 5px 15px;
-  border: 2px solid #00ff00;
-  border-radius: 5px;
-  background: rgba(0,0,0,0.7);
-  color: #00ff00;
-  font-family: 'Courier New', monospace;
-  font-size: 12px;
-  text-align: center;
-  animation: neonFlicker 1.5s infinite;
-}
+.now-playing { position:fixed; top:10px; right:20px; z-index:20; padding:5px 15px; border:2px solid #00ff00; border-radius:5px; background: rgba(0,0,0,0.7); color:#00ff00; font-family:'Courier New', monospace; font-size:12px; text-align:center; animation:neonFlicker 1.5s infinite; }
+@keyframes neonFlicker {0%,100%{opacity:1;text-shadow:0 0 5px #00ff00,0 0 10px #00ff00;}50%{opacity:0.8;text-shadow:0 0 20px #00ff00,0 0 30px #c0ffc0;}25%,75%{opacity:0.9;text-shadow:0 0 10px #00ff00,0 0 20px #00ff00;}}
 
-@keyframes neonFlicker {
-  0%,100% { opacity:1; text-shadow:0 0 5px #00ff00,0 0 10px #00ff00; }
-  50% { opacity:0.8; text-shadow:0 0 20px #00ff00,0 0 30px #c0ffc0; }
-  25%,75% { opacity:0.9; text-shadow:0 0 10px #00ff00,0 0 20px #00ff00; }
-}
+/* HOA Section */
+#hoaPage { display:none; flex-direction: column; align-items:center; justify-content:center; width:100%; height:100%; z-index:2; }
+.hoa-text-box { width:300px; padding:15px; background:rgba(0,0,0,0.7); border:2px solid #00ff00; border-radius:10px; box-shadow:0 0 15px #00ff00; color:#00ff00; text-align:center; font-size:14px; user-select:none; pointer-events:none; animation:textglow 3s infinite alternate; }
+.back-btn { position:fixed; left:20px; top:20px; padding:10px 20px; border:2px solid #00ff00; color:#00ff00; background:rgba(0,0,0,0.7); cursor:pointer; font-family:'Courier New', monospace; border-radius:5px; text-align:center; }
+.back-btn:hover { background:rgba(0,0,0,0.9); box-shadow:0 0 20px #00ff00; animation:glitch 0.5s infinite; }
 
-/* HOA page text box */
-.hoa-text-box {
-  width: 300px;
-  padding: 15px;
-  background: rgba(0,0,0,0.7);
-  border: 2px solid #00ff00;
-  border-radius: 10px;
-  box-shadow: 0 0 15px #00ff00;
-  color: #00ff00;
-  text-align: center;
-  font-size: 14px;
-  user-select: none;
-  pointer-events: none;
-  animation: textglow 3s infinite alternate;
-  position: relative;
-  margin-top: 20px;
-  z-index: 2;
-}
 </style>
 </head>
 <body>
 
-<div class="hoa-btn" onclick="showHOA()">HOA</div>
-<div class="now-playing" id="nowPlaying">Now Playing: Song 1</div>
-
 <canvas id="matrix"></canvas>
 
-<h1>HelloKitty.cc</h1>
-
-<div class="boxes">
-  <div class="display-box" onclick="showOwners()">Owners</div>
-  <div class="display-box">Rtf The Larp</div>
+<div id="mainPage">
+  <h1>HelloKitty.cc</h1>
+  <div class="boxes">
+    <div class="display-box" onclick="showOwners()">Owners</div>
+    <div class="display-box">Rtf The Larp</div>
+  </div>
 </div>
 
-<div class="sparkle" style="top:10%; left:20%; animation-delay:0s;"></div>
-<div class="sparkle" style="top:30%; left:70%; animation-delay:1s;"></div>
-<div class="sparkle" style="top:60%; left:40%; animation-delay:2s;"></div>
-<div class="sparkle" style="top:80%; left:80%; animation-delay:3s;"></div>
-
-<!-- HOA text box -->
-<div class="hoa-text-box" id="hoaBox" style="display:none;">Anti-god the wannabe</div>
+<div id="hoaPage">
+  <div class="hoa-text-box">Anti-god the wannabe</div>
+  <div class="back-btn" onclick="showMain()">Back</div>
+</div>
 
 <div class="modal" id="ownersModal">
   <div class="modal-content">
@@ -222,49 +115,46 @@ h1 {
 </div>
 
 <div id="bgMusic"></div>
-
 <div class="unmute-btn" onclick="unmuteMusic()">Unmute Music</div>
 <div class="skip-btn" onclick="skipToSecond()">Skip to 2nd Song</div>
-
 <div class="music-warning" id="musicWarning">It might take a minute for music to start</div>
+<div class="now-playing" id="nowPlaying">Now Playing: Song 1</div>
 
 <script src="https://www.youtube.com/iframe_api"></script>
 <script>
-const canvas=document.getElementById('matrix');
-const ctx=canvas.getContext('2d');
-canvas.width=window.innerWidth; canvas.height=window.innerHeight;
-const letters='01ABCDEFGHIJKLMNOPQRSTUVWXYZ@#$%^&*()*&^%';
-const fontSize=16;
-const columns=canvas.width/fontSize;
-const drops=Array(Math.floor(columns)).fill(1);
-function draw(){
-  ctx.fillStyle='rgba(0,0,0,0.05)';
-  ctx.fillRect(0,0,canvas.width,canvas.height);
-  ctx.fillStyle='#00ff00'; ctx.font=fontSize+'px monospace';
+// Matrix rain
+const canvas = document.getElementById('matrix');
+const ctx = canvas.getContext('2d');
+canvas.width = window.innerWidth; canvas.height = window.innerHeight;
+const letters = '01ABCDEFGHIJKLMNOPQRSTUVWXYZ@#$%^&*()*&^%';
+const fontSize = 16;
+const columns = canvas.width / fontSize;
+const drops = Array(Math.floor(columns)).fill(1);
+function drawMatrix(){
+  ctx.fillStyle='rgba(0,0,0,0.05)'; ctx.fillRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle='#00ff00'; ctx.font = fontSize + 'px monospace';
   for(let i=0;i<drops.length;i++){
-    const text=letters[Math.floor(Math.random()*letters.length)];
+    const text = letters[Math.floor(Math.random()*letters.length)];
     ctx.fillText(text,i*fontSize,drops[i]*fontSize);
     if(drops[i]*fontSize>canvas.height && Math.random()>0.975){ drops[i]=0; }
     drops[i]++;
   }
 }
-setInterval(draw,50);
-window.addEventListener('resize',()=>{canvas.width=window.innerWidth;canvas.height=window.innerHeight;});
+setInterval(drawMatrix,50);
+window.addEventListener('resize',()=>{ canvas.width=window.innerWidth; canvas.height=window.innerHeight; });
 
-const modal=document.getElementById('ownersModal');
+// Modal functions
+const modal = document.getElementById('ownersModal');
 function showOwners(){ modal.style.display='flex'; }
 function closeModal(){ modal.style.display='none'; }
 window.onclick=function(event){ if(event.target===modal) modal.style.display='none'; }
 
-function showHOA(){ 
-  document.getElementById('hoaBox').style.display='block'; 
-  window.scrollTo(0,0); 
-}
+// Switch between main page and HOA
+function showHOA(){ document.getElementById('mainPage').style.display='none'; document.getElementById('hoaPage').style.display='flex'; }
+function showMain(){ document.getElementById('hoaPage').style.display='none'; document.getElementById('mainPage').style.display='flex'; }
 
-setTimeout(()=>{
-  const mw=document.getElementById('musicWarning');
-  if(mw){ mw.style.opacity='0'; setTimeout(()=>{ mw.style.display='none'; },1000); }
-},10000);
+// Music warning fade
+setTimeout(()=>{ const mw=document.getElementById('musicWarning'); if(mw){ mw.style.opacity='0'; setTimeout(()=>{ mw.style.display='none'; },1000); } },10000);
 
 // YouTube Music
 let player;
@@ -272,38 +162,17 @@ const songs=['xeNf2EKkpi4','mhg4J39rRdE'];
 const songNames=['Song 1','Song 2'];
 const nowPlaying=document.getElementById('nowPlaying');
 let currentSong=0;
-
 function updateNowPlaying(){ nowPlaying.textContent='Now Playing: '+songNames[currentSong]; }
-
 function onYouTubeIframeAPIReady(){
-  player=new YT.Player('bgMusic',{
-    height:'0', width:'0', videoId:songs[currentSong],
-    playerVars:{autoplay:1,controls:0,loop:0,playlist:songs[currentSong],mute:1},
-    events:{'onReady':onPlayerReady,'onStateChange':onPlayerStateChange}
-  });
+  player=new YT.Player('bgMusic',{height:'0',width:'0',videoId:songs[currentSong],playerVars:{autoplay:1,controls:0,loop:0,playlist:songs[currentSong],mute:1},events:{'onReady':onPlayerReady,'onStateChange':onPlayerStateChange}});
 }
-
 function onPlayerReady(event){ event.target.playVideo(); updateNowPlaying(); }
-
-function onPlayerStateChange(event){
-  if(event.data===YT.PlayerState.ENDED){
-    currentSong++;
-    if(currentSong<songs.length){ player.loadVideoById(songs[currentSong]); }
-    else{ currentSong=0; player.loadVideoById(songs[currentSong]); }
-    updateNowPlaying();
-  }
-}
-
+function onPlayerStateChange(event){ if(event.data===YT.PlayerState.ENDED){ currentSong++; if(currentSong<songs.length){ player.loadVideoById(songs[currentSong]); } else{ currentSong=0; player.loadVideoById(songs[currentSong]); } updateNowPlaying(); } }
 function unmuteMusic(){ player.unMute(); document.querySelector('.unmute-btn').style.display='none'; document.getElementById('musicWarning').style.display='none'; }
-
-function skipToSecond(){ 
-  currentSong=1; 
-  player.loadVideoById(songs[currentSong]); 
-  updateNowPlaying(); 
-  document.querySelector('.skip-btn').style.display='none';
-}
+function skipToSecond(){ currentSong=1; player.loadVideoById(songs[currentSong]); updateNowPlaying(); document.querySelector('.skip-btn').style.display='none'; }
 </script>
 </body>
 </html>
+
 
 
