--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@ body {
   overflow: hidden;
   perspective: 1000px;
   position: relative;
+  cursor: crosshair;
 }
+
+/* Canvas for matrix effect and particles */
+canvas { position:absolute; top:0; left:0; width:100%; height:100%; z-index:0; }
 
 /* HOA Button */
 .hoa-btn {
@@ -41,29 +45,24 @@ body {
 }
 .hoa-btn:hover { transform: translateX(-50%) scale(1.05); box-shadow: 0 0 20px #00ff00; }
 
-/* Canvas for matrix effect */
-canvas { position: absolute; top:0; left:0; width:100%; height:100%; z-index:0; }
-
 /* Main Page Styles */
 #mainPage { display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100%; height: 100%; z-index:2; }
-
-h1 { font-size:2em; text-shadow:0 0 10px #00ff00; margin-bottom:20px; animation:glow 2s infinite alternate; text-align:center; }
+h1 { font-size:2em; text-shadow:0 0 10px #00ff00; margin-bottom:20px; animation:glow 2s infinite alternate, glitchText 5s infinite; text-align:center; }
 @keyframes glow { from { text-shadow:0 0 10px #00ff00;} to{ text-shadow:0 0 20px #00ff00,0 0 40px #00ff00;} }
+@keyframes glitchText { 0% { transform: translate(0,0); } 20% { transform: translate(-2px,2px); } 40% { transform: translate(2px,-2px); } 60% { transform: translate(-1px,1px); } 80% { transform: translate(1px,-1px); } 100% { transform: translate(0,0); } }
 
 .boxes { display:flex; gap:50px; }
-.display-box { width:200px; padding:15px; background:rgba(0,0,0,0.7); border:2px solid #00ff00; border-radius:5px; box-shadow:0 0 15px #00ff00; color:#00ff00; text-align:center; font-size:14px; user-select:none; cursor:pointer; pointer-events:auto; animation:textglow 3s infinite alternate; font-family:'Courier New', monospace; transition: transform 0.3s, box-shadow 0.3s; }
+.display-box { width:200px; padding:15px; background:rgba(0,0,0,0.7); border:2px solid #00ff00; border-radius:5px; box-shadow:0 0 15px #00ff00; color:#00ff00; text-align:center; font-size:14px; user-select:none; cursor:pointer; pointer-events:auto; animation:textglow 3s infinite alternate, glitchBox 6s infinite; font-family:'Courier New', monospace; transition: transform 0.3s, box-shadow 0.3s; }
 .display-box:hover { transform:scale(1.05); box-shadow:0 0 30px #00ff00,0 0 50px #c0ffc0; }
+@keyframes glitchBox { 0% { transform: translate(0,0) rotate(0deg); } 20% { transform: translate(-2px,2px) rotate(-1deg); } 40% { transform: translate(2px,-2px) rotate(1deg); } 60% { transform: translate(-1px,1px) rotate(0deg); } 80% { transform: translate(1px,-1px) rotate(-1deg); } 100% { transform: translate(0,0) rotate(0deg); } }
 
-@keyframes textglow { from{ text-shadow:0 0 5px #00ff00;color:#00ff00;} to{ text-shadow:0 0 15px #00ff00,0 0 30px #00ff00;color:#c0ffc0;} }
-
-/* Sparkles */
-.sparkle { position:absolute; width:6px; height:6px; background:#00ff00; border-radius:50%; box-shadow:0 0 10px #00ff00; animation:sparkleAnim 3s infinite; }
-@keyframes sparkleAnim { 0% { opacity:0; transform:translateY(0) rotate(0deg); } 50% { opacity:1; transform:translateY(-20px) rotate(180deg);} 100% { opacity:0; transform:translateY(0) rotate(360deg);} }
+@keyframes textglow { from{ text-shadow:0 0 5px #00ff00;color:#00ff00;} to{ text-shadow:0 0 25px #00ff00,0 0 40px #c0ffc0;color:#c0ffc0;} }
 
 /* Owners Modal */
-.modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:10; justify-content:center; align-items:center; }
-.modal-content { background:rgba(0,0,0,0.9); border:2px solid #00ff00; padding:30px; border-radius:10px; color:#00ff00; font-family:'Courier New', monospace; text-align:center; position:relative; box-shadow:0 0 30px #00ff00; }
-.close-btn { position:absolute; top:10px; right:15px; font-size:18px; cursor:pointer; color:#00ff00; font-weight:bold; }
+.modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:10; justify-content:center; align-items:center; }
+.modal-content { background:rgba(0,0,0,0.95); border:2px solid #00ff00; padding:30px; border-radius:10px; color:#00ff00; font-family:'Courier New', monospace; text-align:center; position:relative; box-shadow:0 0 30px #00ff00; overflow:hidden; }
+.modal-content canvas { position:absolute; top:0; left:0; width:100%; height:100%; z-index:0; }
+.close-btn { position:absolute; top:10px; right:15px; font-size:18px; cursor:pointer; color:#00ff00; font-weight:bold; z-index:2; }
 .close-btn:hover { color:#c0ffc0; }
 
 /* Buttons */
@@ -71,7 +70,6 @@ h1 { font-size:2em; text-shadow:0 0 10px #00ff00; margin-bottom:20px; animation:
 .unmute-btn { bottom:60px; right:20px; }
 .skip-btn { bottom:100px; right:20px; }
 .unmute-btn:hover, .skip-btn:hover { background: rgba(0,0,0,0.9); box-shadow:0 0 20px #00ff00,0 0 40px #00ff00; animation:glitch 0.5s infinite; }
-@keyframes glitch {0% { transform: translate(0,0) skew(0deg);}20% { transform: translate(-2px,2px) skew(-2deg);}40% { transform: translate(2px,-2px) skew(2deg);}60% { transform: translate(-1px,1px) skew(-1deg);}80% { transform: translate(1px,-1px) skew(1deg);}100% { transform: translate(0,0) skew(0deg);} }
 
 /* Music Warning */
 .music-warning { position: fixed; bottom:20px; right:20px; z-index:20; padding:10px 20px; border:2px solid #00ff00; color:#00ff00; background: rgba(0,0,0,0.7); font-family:'Courier New', monospace; border-radius:5px; text-align:center; transition: opacity 1s; }
@@ -82,10 +80,9 @@ h1 { font-size:2em; text-shadow:0 0 10px #00ff00; margin-bottom:20px; animation:
 
 /* HOA Section */
 #hoaPage { display:none; flex-direction: column; align-items:center; justify-content:center; width:100%; height:100%; z-index:2; }
-.hoa-text-box { width:300px; padding:15px; background:rgba(0,0,0,0.7); border:2px solid #00ff00; border-radius:10px; box-shadow:0 0 15px #00ff00; color:#00ff00; text-align:center; font-size:14px; user-select:none; pointer-events:none; animation:textglow 3s infinite alternate; }
+.hoa-text-box { width:300px; padding:15px; background:rgba(0,0,0,0.7); border:2px solid #00ff00; border-radius:10px; box-shadow:0 0 15px #00ff00; color:#00ff00; text-align:center; font-size:14px; user-select:none; pointer-events:none; animation:textglow 3s infinite alternate; font-family:'Courier New', monospace; white-space: pre; }
 .back-btn { position:fixed; left:20px; top:20px; padding:10px 20px; border:2px solid #00ff00; color:#00ff00; background:rgba(0,0,0,0.7); cursor:pointer; font-family:'Courier New', monospace; border-radius:5px; text-align:center; }
 .back-btn:hover { background:rgba(0,0,0,0.9); box-shadow:0 0 20px #00ff00; animation:glitch 0.5s infinite; }
-
 </style>
 </head>
 <body>
@@ -101,12 +98,13 @@ h1 { font-size:2em; text-shadow:0 0 10px #00ff00; margin-bottom:20px; animation:
 </div>
 
 <div id="hoaPage">
-  <div class="hoa-text-box">Anti-god the wannabe</div>
+  <div class="hoa-text-box" id="hoaText"></div>
   <div class="back-btn" onclick="showMain()">Back</div>
 </div>
 
 <div class="modal" id="ownersModal">
   <div class="modal-content">
+    <canvas id="modalMatrix"></canvas>
     <span class="close-btn" onclick="closeModal()">&times;</span>
     <h2>Owners</h2>
     <p>NetGov</p>
@@ -145,13 +143,28 @@ window.addEventListener('resize',()=>{ canvas.width=window.innerWidth; canvas.he
 
 // Modal functions
 const modal = document.getElementById('ownersModal');
-function showOwners(){ modal.style.display='flex'; }
+function showOwners(){ modal.style.display='flex'; modalMatrix(); }
 function closeModal(){ modal.style.display='none'; }
 window.onclick=function(event){ if(event.target===modal) modal.style.display='none'; }
 
-// Switch between main page and HOA
-function showHOA(){ document.getElementById('mainPage').style.display='none'; document.getElementById('hoaPage').style.display='flex'; }
+// HOA functions with typing animation
+function showHOA(){ 
+  document.getElementById('mainPage').style.display='none'; 
+  document.getElementById('hoaPage').style.display='flex'; 
+  typeText("Anti-god the wannabe");
+}
 function showMain(){ document.getElementById('hoaPage').style.display='none'; document.getElementById('mainPage').style.display='flex'; }
+
+function typeText(text){
+  const box = document.getElementById('hoaText');
+  box.textContent='';
+  let i=0;
+  const interval = setInterval(()=>{
+    box.textContent += text[i];
+    i++;
+    if(i>=text.length) clearInterval(interval);
+  },50);
+}
 
 // Music warning fade
 setTimeout(()=>{ const mw=document.getElementById('musicWarning'); if(mw){ mw.style.opacity='0'; setTimeout(()=>{ mw.style.display='none'; },1000); } },10000);
@@ -170,9 +183,31 @@ function onPlayerReady(event){ event.target.playVideo(); updateNowPlaying(); }
 function onPlayerStateChange(event){ if(event.data===YT.PlayerState.ENDED){ currentSong++; if(currentSong<songs.length){ player.loadVideoById(songs[currentSong]); } else{ currentSong=0; player.loadVideoById(songs[currentSong]); } updateNowPlaying(); } }
 function unmuteMusic(){ player.unMute(); document.querySelector('.unmute-btn').style.display='none'; document.getElementById('musicWarning').style.display='none'; }
 function skipToSecond(){ currentSong=1; player.loadVideoById(songs[currentSong]); updateNowPlaying(); document.querySelector('.skip-btn').style.display='none'; }
+
+// Matrix inside modal
+function modalMatrix(){
+  const modalCanvas = document.getElementById('modalMatrix');
+  const ctxm = modalCanvas.getContext('2d');
+  modalCanvas.width = modalCanvas.offsetWidth;
+  modalCanvas.height = modalCanvas.offsetHeight;
+  const cols = modalCanvas.width / fontSize;
+  const dropsm = Array(Math.floor(cols)).fill(1);
+  function drawModalMatrix(){
+    ctxm.fillStyle='rgba(0,0,0,0.05)'; ctxm.fillRect(0,0,modalCanvas.width,modalCanvas.height);
+    ctxm.fillStyle='#00ff00'; ctxm.font = fontSize+'px monospace';
+    for(let i=0;i<dropsm.length;i++){
+      const text = letters[Math.floor(Math.random()*letters.length)];
+      ctxm.fillText(text,i*fontSize,dropsm[i]*fontSize);
+      if(dropsm[i]*fontSize>modalCanvas.height && Math.random()>0.975){ dropsm[i]=0; }
+      dropsm[i]++;
+    }
+  }
+  setInterval(drawModalMatrix,50);
+}
 </script>
 </body>
 </html>
+
 
 
 
